--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">NotesApp</string>
+    <string name="app_name">JANA</string>
+    <string name="notes_list">Notes</string>
+    <string name="add_note">Add Note</string>
+    <string name="bin">Bin</string>
 </resources>
