Midpoint of building compose UI, tooke several hours to discover that ModalBottomSheet is bugged on materialv3 1.1.0-alpha06, as stated in issue tracker https://issuetracker.google.com/issues/268380384.
Have to rethink the screen to add a note.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="notes_list">Notes</string>
     <string name="add_note">Add Note</string>
     <string name="bin">Bin</string>
+    <string name="no_content">Nothing to show yet.</string>
+    <string name="loading">Loading</string>
+    <string name="invalid_title">Invalid title, %1$s.</string>
+    <string name="invalid_text">Invalid text, %1$s</string>
 </resources>
