--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,12 @@
     <string name="no_content">Nothing to show yet.</string>
     <string name="loading">Loading</string>
     <string name="invalid_title">Invalid title, %1$s.</string>
-    <string name="invalid_text">Invalid text, %1$s</string>
+    <string name="invalid_text">Invalid text, %1$s.</string>
+    <string name="title_label">Title</string>
+    <string name="note_title_hint">The note title</string>
+    <string name="text_label">Text</string>
+    <string name="text_hint">Write here your note</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="add_a_note_title">Add a note</string>
 </resources>
