--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
+
+    <string name="date_format">dd/MM/uuuu</string>
+
     <string name="app_name">JANA</string>
     <string name="notes_list">Notas</string>
     <string name="add_note">Adicionar</string>
