--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="bin">Bin</string>
     <string name="no_content">Nothing to show yet.</string>
     <string name="loading">Loading</string>
-    <string name="invalid_title">Invalid title, %1$s.</string>
-    <string name="invalid_text">Invalid text, %1$s.</string>
+    <string name="invalid_title">Invalid title, at least %1$s characters expected.</string>
+    <string name="invalid_text">Invalid text, at least %1$s characters expected.</string>
     <string name="title_label">Title</string>
     <string name="note_title_hint">The note title</string>
     <string name="text_label">Text</string>
