--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -46,5 +46,6 @@
     <string name="undo">DESFAZER</string>
     <string name="audio_recording_permisison_needed">Permissão para gravar áudio necessária</string>
     <string name="note_edited">Nota editada com sucesso</string>
+    <string name="note_binned">Nota movida para a lixeira</string>
 
 </resources>
